--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -31,6 +31,10 @@
     <link rel="stylesheet" href="/css/lib/file-upload.css">
 
     <link rel="stylesheet" href="/css/lib/audioplayer.css">
+    <!-- Toastify for toast notifications -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.12.0/toastify.min.css">
     <!-- main css -->
     <link rel="stylesheet" href="/css/style.css">
+    <!-- SweetAlert2 custom theme (alignment, colors, buttons) -->
+    <link rel="stylesheet" href="/css/swal-custom.css">
 </head>
