--- a/views/layout/layout2.ejs
+++ b/views/layout/layout2.ejs
@@ -7,6 +7,8 @@
 <body>
     <%- body %>
    
+      <script src="/js/config.js"></script>
+    <script src="/js/api/authApi.js"></script>
     <%- include('../partials/scripts') %> 
     
      <!-- Add the script block here -->
