--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -1,5 +1,9 @@
 <!-- jQuery library js -->
 <script src="/js/lib/jquery-3.7.1.min.js"></script>
+<!-- Toastify + SweetAlert2 for toasts and confirmations -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.12.0/toastify.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/js/notify.js"></script>
 <!-- Bootstrap js -->
 <script src="/js/lib/bootstrap.bundle.min.js"></script>
 <!-- Apex Chart js -->
